public/assets/psu.css
/* PSU Theme style alterations work with archivesspace */
body {
  --bs-border-width: 1px;
}

h1 {
  margin-bottom: 1.5rem;
}

.h1, h1 {
    font-size: 2rem;
}

.h2, h2,
.sidebar-title h1 {
  font-size: 1.5rem;
}

.h3, h3,
.accordion h2.card-title {
  font-size: 1.25rem;
}

span.component {
  font-weight: 400;
}

.form-control {
  appearance: auto;
  -webkit-appearance: auto;
}

/* Apply primary styles to default buttons */
.btn-default {
  --bs-btn-bg: #005fa9;
  --bs-btn-color: #fff;
  --bs-btn-border-color: #005fa9;
  --bs-btn-hover-bg: #001e44;
  --bs-btn-hover-border-color: #001e44;
  --bs-btn-hover-color: #fff;
}

/* Keeping the workmark in line with logo longer. */
@media (min-width: 650px) and (max-width: 767px) {
  .header-mark {
    align-items: flex-start;
    flex-direction: row;
  }
}

.dropdown-menu>li>a {
  padding: 3px 20px;
  clear: both;
  font-weight: 400;
  line-height: 1.5;
  color: #333;
  white-space: nowrap;
}

.dropdown-menu>li>a:focus {
  background-color: #e4e5e7;
}

/* Forcing the container-fluid behavior to PSU theme. Slightly increasing
  max-width. */
.container-fluid {
  padding-left: 1.5rem !important;
  padding-right: 1.5rem !important;
  max-width: calc(1420px + 6rem);
}

@media (min-width: 768px) {
  .container-fluid {
    padding-left: 3rem !important;
    padding-right: 3rem !important;
  }
}

.rl-navbar .nav-item .nav-link {
  color: #fff;
}

.rl-navbar .nav-item .nav-link:hover,
.rl-navbar .nav-item .nav-link:active {
  color: #cce9ff;
}

/* button customization for sidebar (override PSUL defaults) */
.badge.resource i.fa { padding: 0.25rem; }
.badge.resource .btn {
  margin-left: inherit;
  margin-right: inherit;
}

/* tree styles */
#infinite-tree-container,
#request-tree-container,
.largetree-container { 
  background-color: #fff;
  border: none;
}

.request-tree {
  margin: 0;
  padding: 0;
  list-style: none;
}

/* override PSU theming */
.table > :not(caption) > * > * { padding: 0; }

/* root node color and text decoration (will perma-fix later) */
.root-node .node-title,
.root-node .node-title:hover { color: var(--bs-body-color); }
.root-node .node-title:hover { text-decoration: none; }

.largetree-container .table { border-spacing: 1rem; }

.largetree-container .table.root div.table-row:first-child,
.root.node > .node-row > .node-body {
  background-color: #fff;
  font-weight: bold;
}
.largetree-container .table.root div.table-row:nth-of-type(2n+1) { background-color: #fff; }

.largetree-container .indentor, .node-expand { background-color: #fff; }
.largetree-container .table-cell { white-space: inherit; }

.largetree-node { font-size: .8rem; }
.largetree-node.indent-level-1 { font-size: 1rem; }

.infinite-item { margin: 1rem; }
.indent-level-1 .table-cell { padding-left: 20px; }
.indent-level-2 .table-cell { padding-left: 20px; }
.indent-level-3 .table-cell { padding-left: 40px; }
.indent-level-4 .table-cell { padding-left: 60px; }
.indent-level-5 .table-cell { padding-left: 80px; }
.table-cell > button { margin-left: -10px; }

.infinite-record-record { background-image: none; }

.node-indentation {
  background-color: #fff;
  background-image: none;
}

.table-row-group > div[id*="archival_object_"] { box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; }

/* tree styles to override some things in peripheral.min.css that don't play nice with ASpace tables */
.table > .root-row > * > * { color: rgba(var(--bs-link-color-rgb),var(--bs-link-opacity,1)); }
.table > .current > * > * { background-color: #effaff; }

/* search result styles */
.recordrow {
  border: none;
  border-bottom: 1px dotted #e4e5e7;
  padding: 1rem 0.635rem;
}

.search-results h3 {
  font-size: 1.25rem;
}

.filters li {
  margin-bottom: .5rem;
}

.filters .filter {
  font-size: 1rem;
  border: 1px solid #e4e5e7;
  border-radius: 4px;
  padding: 0.25rem 0.5rem;
  margin-bottom: 1rem;
  position: relative;
}

.filters .filter:hover {
  border-color: #333;
}

/* Duplicating stretched-link bootstrap functionality */
.filters .filter a:after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 1;
  pointer-events: auto;
  content: "";
  background-color: rgba(0, 0, 0, 0);
}

.searchstatement .no-bullets {
  margin-bottom: 0;
}

.sidebar-container {
  border-radius: 8px;
  box-shadow: rgba(0, 0, 0, 0.075) 0px 2px 4px 0px;
}

.sidebar-container > .bg-light {
  border-radius: 8px 8px 0 0;
}

.sidebar-container hr {
  margin-top: 0
}

.sidebar-container > :not(.filters):not(hr):not(.bg-light) {
  padding-left: .75rem;
  padding-left: .75rem;
}

